--- a/_posts/2019-04-25-carrer.md
+++ b/_posts/2019-04-25-carrer.md
@@ -1,6 +1,38 @@
 # 职业规划
-## 第一职业
-## 第二职业
-## 第三职业
+## 职业选择
+### 第一职业
+### 第二职业
+### 第三职业
 ## 金句良言
-## 绿盟19周年
+- [侯捷的职业建议](http://www.ruanyifeng.com/blog/2008/05/jjhou_s_career_suggestions.html) 
+- [软件工程师的职业建议](http://www.ruanyifeng.com/survivor/startup/advices.html)
+``````
+  一、以兴趣为要。
+  二、正确的认知。
+  三、EQ 比 IQ 更重要。
+  四、学技术要掌握本质。
+  五、刻苦修炼内功。
+  六、唯坚持得成功。
+  七、不要别人点什么，就做什么
+  八、推销自己
+  九、学会带领团队
+  十、生活才是最重要的
+  十一、自己找到道路
+  十二、把自己当成主人
+``````
+- [如何度过职业生涯？](http://www.ruanyifeng.com/blog/2008/09/how_do_you_live_out_your_career_life.html)
+``````
+  一、不要抱怨。
+  二、选对合适自己的行业。
+  三、不要轻易换行业。
+  四、努力+坚持。
+  五、不要被挫折吓到。
+  六、坚持走自己的路，别在乎别人怎么说
+``````
+## 绿盟19周年   
+
+   <img src="https://wx3.sinaimg.cn/mw690/85e506dfly1g2ek6qrytwj20u0164gox.jpg">
+
+## 相关资料
+- [阮一峰&创业](http://www.ruanyifeng.com/blog/startup/)
+- [创业的好处与坏处](http://www.ruanyifeng.com/blog/2007/06/why_not_to_do_a_startup.html)
